# FastShared-IPC

./: .gitignore  CMakeLists.txt  README.md  uninstall.cmake
cmake/: Config.cmake.in  FSIPCConfig.cmake.in  uninstall.cmake.in
demo/: CMakeLists.txt  receive.cpp  send.cpp
include/: fsipc.h  test.h
src/: fsipc.cpp  test.cpp
test/: main.cpp
